# perception

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md  perception.db  perception.db-shm  perception.db-wal  perception.example.toml  perception.toml
.github/workflows/: ci.yml
benches/: inference.rs
docs/: ARCHITECTURE.md
src/: config.rs  download.rs  engine.rs  error.rs  face_db.rs  main.rs  preview.rs  types.rs
src/capture/: camera.rs  image.rs  mod.rs  video.rs
src/pipeline/: detector.rs  face.rs  mod.rs  ocr.rs  tracker.rs
src/storage/: crops.rs  mod.rs  postgres.rs  sqlite.rs
tests/: cli_test.rs
